--- a/models-order/merge-order.yaml
+++ b/models-order/merge-order.yaml
@@ -4,6 +4,7 @@ merge_order:
   - mistral-instruct.yaml
   - mixtral-instruct.yaml
   - e5-embedding-v5.yaml
+  - llama-3.1-instruct-decoded.yaml
   - e5-embedding-v5-decoded.yaml
   - mistral-embedding-v2.yaml
   - snowflake-arctic-embed-large-embedding.yaml
