--- a/models/public/1.52.0/mixtral-instruct.yaml
+++ b/models/public/1.52.0/mixtral-instruct.yaml
@@ -411,7 +411,7 @@ models:
       - key: DOWNLOAD SIZE
         value: 285GB
   labels:
-  - Mistral
+  - Mixtral
   - Instruct
   - Large Language Model
   - TensorRT-LLM
