--- a/models-order/private/1.51.0/merge-order.yaml
+++ b/models-order/private/1.51.0/merge-order.yaml
@@ -1,15 +1,15 @@
 merge_order:
-  - llama-3.2-vision-instruct.yaml
-  - llama-3.1-instruct.yaml
-  - mistral-instruct.yaml
-  - mixtral-instruct.yaml
-  - e5-embedding-v5.yaml
-  - mistral-embedding-v2.yaml
-  - snowflake-arctic-embed-large-embedding.yaml
-  - mistral-rerank-v3.yaml
-  - llama-3.3-instruct.yaml
-  - google-flan-t5.yaml
-  - star-coder.yaml
-  - gemma-2.yaml
-  - llama-3.1-nemotron.yaml
-  - llama-3-sqlcoder-8b.yaml
+ - llama-3.3-instruct.yaml
+ - deepseek-r1-distill-llama.yaml
+ - starcoder-2.yaml
+ - llama-3.2-instruct.yaml
+ - llama-3.1-nemotron-nano-v1.yaml
+ - llama-3.2-vision-instruct.yaml
+ - llama-3.1-instruct.yaml
+ - mistral-instruct.yaml
+ - mixtral-instruct.yaml
+ - llama-3.2-nv-embedqa-v2.yaml
+ - llama-3.2-nv-rerankqa-v2.yaml
+ - google-flan-t5.yaml
+ - gemma-2.yaml
+ - llama-3-sqlcoder-8b.yaml
