--- a/models/public/1.50.0/llama-3.1-nemotron-nano-v1.yaml
+++ b/models/public/1.50.0/llama-3.1-nemotron-nano-v1.yaml
@@ -69,7 +69,7 @@ models:
       - key: GPU
         value: L40S
       - key: GPU DEVICE
-        value: 2237:10de
+        value: 26b9:10de
       - key: COUNT
         value: 1
       - key: NIM VERSION
@@ -99,7 +99,7 @@ models:
       - key: GPU
         value: H100
       - key: GPU DEVICE
-        value: 2237:10de
+        value: 2330:10de
       - key: COUNT
         value: 1
       - key: NIM VERSION
