--- a/models/public/1.51.0/starcoder-2.yaml
+++ b/models/public/1.51.0/starcoder-2.yaml
@@ -70,7 +70,7 @@ models:
       - key: PRECISION
         value: FP8
       - key: GPU
-        value: h100
+        value: H100
       - key: COUNT
         value: 2
       - key: GPU DEVICE
@@ -103,7 +103,7 @@ models:
       - key: PRECISION
         value: FP8
       - key: GPU
-        value: h100
+        value: H100
       - key: COUNT
         value: 2
       - key: GPU DEVICE
@@ -166,7 +166,7 @@ models:
       - key: PRECISION
         value: BF16
       - key: GPU
-        value: h100
+        value: H100
       - key: COUNT
         value: 2
       - key: GPU DEVICE
@@ -199,7 +199,7 @@ models:
       - key: PRECISION
         value: BF16
       - key: GPU
-        value: h100
+        value: H100
       - key: COUNT
         value: 1
       - key: GPU DEVICE
