--- a/models/public/1.50.0/llama-3.2-nv-embedqa-v2.yaml
+++ b/models/public/1.50.0/llama-3.2-nv-embedqa-v2.yaml
@@ -33,7 +33,7 @@ models:
       - key: PRECISION
         value: FP16
       - key: GPU
-        value: a10g
+        value: A10G
       - key: COUNT
         value: 1
       - key: NIM VERSION
@@ -57,7 +57,7 @@ models:
       - key: PRECISION
         value: FP8
       - key: GPU
-        value: h100-hbm3-80gb
+        value: H100-HBM3-80GB
       - key: COUNT
         value: 1
       - key: NIM VERSION
@@ -81,7 +81,7 @@ models:
       - key: PRECISION
         value: FP8
       - key: GPU
-        value: l40s
+        value: L40S
       - key: COUNT
         value: 1
       - key: NIM VERSION
@@ -105,7 +105,7 @@ models:
       - key: PRECISION
         value: FP16
       - key: GPU
-        value: h100-hbm3-80gb
+        value: H100-HBM3-80GB
       - key: COUNT
         value: 1
       - key: NIM VERSION
@@ -129,7 +129,7 @@ models:
       - key: PRECISION
         value: FP16
       - key: GPU
-        value: l40s
+        value: L40S
       - key: COUNT
         value: 1
       - key: NIM VERSION
