--- a/manifests/1.10.0/nim/nvidia/nemoretriever-parse.yaml
+++ b/manifests/1.10.0/nim/nvidia/nemoretriever-parse.yaml
@@ -2,7 +2,7 @@
 19c68819d9428cfa494e977f4d2be6378215a8f610cce9bdfc0aa3cdd7d66aa9:
   model: nvidia/nemoretriever-parse
   container_url: nvcr.io/nvstaging/nim/nemoretriever-parse:1.2.0ga.rc3
-  release: 1.2.0ga.rc3
+  release: 1.2.0
   tags: 
     gpu: A100
     gpu_device: 20b2:10de
@@ -66,7 +66,7 @@
 8db6dcd816ca1ce8d07e72d8b9c4682120b3c50799422361e35b4ab87820efd6:
   model: nvidia/nemoretriever-parse
   container_url: nvcr.io/nvstaging/nim/nemoretriever-parse:1.2.0ga.rc3
-  release: 1.2.0ga.rc3
+  release: 1.2.0
   tags: 
     gpu: H100
     gpu_device: 2330:10de
@@ -130,7 +130,7 @@
 00c8a43783e7acf3d59a0d773cd78d3d29eaa71fa4412af7af2fbaf20e196a8b:
   model: nvidia/nemoretriever-parse
   container_url: nvcr.io/nvstaging/nim/nemoretriever-parse:1.2.0ga.rc3
-  release: 1.2.0ga.rc3
+  release: 1.2.0
   tags: 
     gpu: L40S
     gpu_device: 26b5:10de
@@ -194,7 +194,7 @@
 82ec47683fd0f95cee922844e2a3f1709797d574a520d254b9c0d563ab4e4664:
   model: nvidia/nemoretriever-parse
   container_url: nvcr.io/nvstaging/nim/nemoretriever-parse:1.2.0ga.rc3
-  release: 1.2.0ga.rc3
+  release: 1.2.0
   tags:
     llm_engine: tensorrt_llm
     pp: '1'
