--- a/manifests/1.10.0/nim/nvidia/llama-3.1-nemotron-nano-8b-v1.yaml
+++ b/manifests/1.10.0/nim/nvidia/llama-3.1-nemotron-nano-8b-v1.yaml
@@ -1,7 +1,7 @@
 schema_version: '2.0'
 profile_selection_criteria: auto
-model: llama-3.1-nemotron-nano-8b-v1
-release: 1.8.3
+model: nvidia/llama-3.1-nemotron-nano-8b-v1
+release: 1.8.2
 profiles:
 - id: 375dc0ff86133c2a423fbe9ef46d8fdf12d6403b3caa3b8e70d7851a89fc90dd
   tags:
