--- a/manifests/1.11.0/nim/bigcode/starcoder2-7b.yaml
+++ b/manifests/1.11.0/nim/bigcode/starcoder2-7b.yaml
@@ -1,6 +1,6 @@
 schema_version: '2.0'
 profile_selection_criteria: auto
-model: starcoder2-7b
+model: bigcode/starcoder2-7b
 release: 1.8.1
 profiles:
 - id: 375dc0ff86133c2a423fbe9ef46d8fdf12d6403b3caa3b8e70d7851a89fc90dd
