--- a/manifests/1.11.0/nim/meta/llama-3.3-70b-instruct.yaml
+++ b/manifests/1.11.0/nim/meta/llama-3.3-70b-instruct.yaml
@@ -1,6 +1,6 @@
 schema_version: '2.0'
 profile_selection_criteria: auto
-model: llama-3-3-70b-instruct
+model: meta/llama-3.3-70b-instruct
 release: 1.8.2
 profiles:
 - id: 1d7b604f835f74791e6bfd843047fc00a5aef0f72954ca48ce963811fb6f3f09
