--- a/manifests/1.11.0/nim/nvidia/llama-3.3-nemotron-super-49b-v1.yaml
+++ b/manifests/1.11.0/nim/nvidia/llama-3.3-nemotron-super-49b-v1.yaml
@@ -1,6 +1,6 @@
 schema_version: '2.0'
 profile_selection_criteria: auto
-model: llama-3.3-nemotron-super-49b-v1
+model: nvidia/llama-3.3-nemotron-super-49b-v1
 release: 1.8.5
 profiles:
 - id: 00e6f59e1003f038ecee8e9aa3ab2d40745bef214c476a381b21886dd8383952
