--- a/manifests/1.8.0/nim/meta/llama-3.2-3b-instruct.yaml
+++ b/manifests/1.8.0/nim/meta/llama-3.2-3b-instruct.yaml
@@ -1,6 +1,6 @@
 schema_version: '2.0'
 profile_selection_criteria: auto
-model: llama-3.2-3b-instruct
+model: meta/llama-3.2-3b-instruct
 release: 1.6.0
 profiles:
 - id: 4f904d571fe60ff24695b5ee2aa42da58cb460787a968f1e8a09f5a7e862728d
