Update merge-order.yaml for CML-Private-155-SP1

--- a/models-order/private/1.51.0/merge-order.yaml
+++ b/models-order/private/1.51.0/merge-order.yaml
@@ -1,15 +1,22 @@
 merge_order:
+  - llama-3.3-instruct.yaml
+  - riva-asr-whisper-large-v3.yaml
+  - riva-asr-canary-1b.yaml
+  - deepseek-r1-distill-llama.yaml
+  - starcoder-2.yaml
+  - llama-3.3-nemotron-super-49b-v1.yaml
+  - llama-3.2-instruct.yaml
   - llama-3.2-vision-instruct.yaml
+  - llama-3.1-nemotron-nano-v1.yaml
   - llama-3.1-instruct.yaml
   - mistral-instruct.yaml
   - mixtral-instruct.yaml
-  - e5-embedding-v5.yaml
-  - mistral-embedding-v2.yaml
-  - snowflake-arctic-embed-large-embedding.yaml
-  - mistral-rerank-v3.yaml
-  - llama-3.3-instruct.yaml
-  - google-flan-t5.yaml
-  - star-coder.yaml
+  - nemoretriever-parse.yaml
+  - nemoretriever-graphic-elements-v1.yaml
+  - nemoretriever-page-elements-v2.yaml
+  - nemoretriever-table-structure-v1.yaml
+  - llama-3.2-nv-embedqa-v2.yaml
+  - llama-3.2-nv-rerankqa-v2.yaml
   - gemma-2.yaml
-  - llama-3.1-nemotron.yaml
   - llama-3-sqlcoder-8b.yaml
+  - paddleocr.yaml
