DSE-46743: Update the gpu values under tags to uppercase

--- a/models/private/1.51.0/llama-3.1-nemotron-nano-v1.yaml
+++ b/models/private/1.51.0/llama-3.1-nemotron-nano-v1.yaml
@@ -14,7 +14,7 @@ models:
   modelVariants:
   - variantId: Llama 3.1 Nemotron Nano 8b V1
     source:
-          URL: https://catalog.ngc.nvidia.com/orgs/nim/teams/nvidia/containers/llama-3.1-nemotron-nano-8b-v1
+      URL: https://catalog.ngc.nvidia.com/orgs/nim/teams/nvidia/containers/llama-3.1-nemotron-nano-8b-v1
     optimizationProfiles:
     - profileId: nim/nvidia/llama-3.1-nemotron-nano-8b-v1:a100x2-latency-bf16-zxsnn7zu2g
       framework: TensorRT-LLM
@@ -25,7 +25,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: a100
+            gpu: A100
             gpu_device: 20b2:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -58,7 +58,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: a100
+            gpu: A100
             gpu_device: 20b2:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -91,7 +91,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -124,7 +124,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -157,7 +157,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -190,7 +190,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -223,7 +223,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -256,7 +256,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -289,7 +289,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -322,7 +322,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: a10g
+            gpu: A10G
             gpu_device: 2237:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -355,7 +355,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -388,7 +388,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -421,7 +421,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -454,7 +454,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -487,7 +487,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -520,7 +520,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -553,7 +553,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -586,7 +586,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -619,7 +619,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -652,7 +652,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -685,7 +685,7 @@ models:
           release: 1.8.4
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -783,7 +783,7 @@ models:
         value: 15GB
   - variantId: Llama 3.1 Nemotron Nano 4b V1
     source:
-          URL: https://catalog.ngc.nvidia.com/orgs/nim/teams/nvidia/containers/llama3.1-nemotron-nano-4b-v1.1
+      URL: https://catalog.ngc.nvidia.com/orgs/nim/teams/nvidia/containers/llama3.1-nemotron-nano-4b-v1.1
     optimizationProfiles:
     - profileId: nim/nvidia/llama3.1-nemotron-nano-4b-v1.1:hf-9f834a8-fix-checksum
       framework: TensorRT-LLM
