--- a/models/private/1.51.0/llama-3.2-instruct.yaml
+++ b/models/private/1.51.0/llama-3.2-instruct.yaml
@@ -14,7 +14,7 @@ models:
   modelVariants:
   - variantId: Llama 3.2 1B Instruct
     source:
-          URL: https://catalog.ngc.nvidia.com/orgs/nvidia/teams/nemo/models/llama-3_2-1b-instruct
+      URL: https://catalog.ngc.nvidia.com/orgs/nvidia/teams/nemo/models/llama-3_2-1b-instruct
     optimizationProfiles:
     - profileId: nim/meta/llama-3.2-1b-instruct:hf-e9f8eff-nim1.5+
       framework: TensorRT-LLM
@@ -25,7 +25,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: gh200_480gb
+            gpu: GH200_480GB
             gpu_device: 2342:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -58,7 +58,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: gh200_480gb
+            gpu: GH200_480GB
             gpu_device: 2342:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -91,7 +91,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: a100
+            gpu: A100
             gpu_device: 20b2:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -124,7 +124,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -157,7 +157,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -190,7 +190,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -223,7 +223,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: a10g
+            gpu: A10G
             gpu_device: 2237:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -256,7 +256,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -289,7 +289,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -322,7 +322,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -355,7 +355,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -388,7 +388,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -421,7 +421,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -454,7 +454,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: a100_sxm4_40gb
+            gpu: A100_SXM4_40GB
             gpu_device: 20b0:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -487,7 +487,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -537,7 +537,7 @@ models:
         value: 3GB
   - variantId: Llama 3.2 3B Instruct
     source:
-          URL: https://catalog.ngc.nvidia.com/orgs/nvidia/teams/nemo/models/llama-3_2-3b-instruct
+      URL: https://catalog.ngc.nvidia.com/orgs/nvidia/teams/nemo/models/llama-3_2-3b-instruct
     optimizationProfiles:
     - profileId: nim/meta/llama-3.2-3b-instruct:a100x1-throughput-fp16-6m5dnxceua
       framework: TensorRT-LLM
@@ -548,7 +548,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: a100
+            gpu: A100
             gpu_device: 20b2:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -581,7 +581,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -614,7 +614,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -647,7 +647,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -680,7 +680,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -713,7 +713,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -746,7 +746,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: a100_sxm4_40gb
+            gpu: A100_SXM4_40GB
             gpu_device: 20b0:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -779,7 +779,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: a10g
+            gpu: A10G
             gpu_device: 2237:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -812,7 +812,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -845,7 +845,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -878,7 +878,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -911,7 +911,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -944,7 +944,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -977,7 +977,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: gh200_480gb
+            gpu: GH200_480GB
             gpu_device: 2342:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1010,7 +1010,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: gh200_480gb
+            gpu: GH200_480GB
             gpu_device: 2342:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
