--- a/models/private/1.51.0/llama-3.1-instruct.yaml
+++ b/models/private/1.51.0/llama-3.1-instruct.yaml
@@ -25,7 +25,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: a100
+            gpu: A100
             gpu_device: 20b2:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -58,7 +58,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -91,7 +91,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -124,7 +124,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -157,7 +157,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -190,7 +190,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -223,7 +223,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -256,7 +256,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -289,7 +289,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -322,7 +322,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -355,7 +355,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -388,7 +388,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: a100
+            gpu: A100
             gpu_device: 20b2:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -421,7 +421,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -454,7 +454,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -487,7 +487,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -520,7 +520,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -553,7 +553,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -586,7 +586,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -619,7 +619,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -652,7 +652,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -685,7 +685,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -718,7 +718,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: a10g
+            gpu: A10G
             gpu_device: 2237:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -751,7 +751,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -784,7 +784,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -817,7 +817,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -850,7 +850,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -883,7 +883,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -916,7 +916,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -949,7 +949,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -982,7 +982,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -1015,7 +1015,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1048,7 +1048,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: a100_sxm4_40gb
+            gpu: A100_SXM4_40GB
             gpu_device: 20b0:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -1081,7 +1081,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1114,7 +1114,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -1223,7 +1223,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: a100
+            gpu: A100
             gpu_device: 20b2:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1256,7 +1256,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: a100
+            gpu: A100
             gpu_device: 20b2:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1289,7 +1289,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1322,7 +1322,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1355,7 +1355,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1388,7 +1388,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1421,7 +1421,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1454,7 +1454,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1487,7 +1487,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1520,7 +1520,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -1553,7 +1553,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1586,7 +1586,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1619,7 +1619,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1652,7 +1652,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1685,7 +1685,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1718,7 +1718,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1751,7 +1751,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1784,7 +1784,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1817,7 +1817,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1850,7 +1850,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1883,7 +1883,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1916,7 +1916,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -1949,7 +1949,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1982,7 +1982,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -2015,7 +2015,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: gh200_480gb
+            gpu: GH200_480GB
             gpu_device: 2342:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -2048,7 +2048,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: gh200_480gb
+            gpu: GH200_480GB
             gpu_device: 2342:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -2081,7 +2081,7 @@ models:
           release: 1.8.6
           tags:
             feat_lora: 'false'
-            gpu: a10g
+            gpu: A10G
             gpu_device: 2237:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
