--- a/models/private/1.51.0/llama-3.3-instruct.yaml
+++ b/models/private/1.51.0/llama-3.3-instruct.yaml
@@ -14,7 +14,7 @@ models:
   modelVariants:
   - variantId: Llama 3.3 70B Instruct
     source:
-          URL: https://catalog.ngc.nvidia.com/orgs/nim/teams/meta/containers/llama-3.3-70b-instruct
+      URL: https://catalog.ngc.nvidia.com/orgs/nim/teams/meta/containers/llama-3.3-70b-instruct
     optimizationProfiles:
     - profileId: nim/meta/llama-3.3-70b-instruct:a100x4-throughput-bf16-sf8byh808a
       framework: TensorRT-LLM
@@ -25,7 +25,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: a100
+            gpu: A100
             gpu_device: 20b2:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -58,7 +58,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -91,7 +91,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -124,7 +124,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -157,7 +157,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -190,7 +190,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -223,7 +223,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -256,7 +256,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -289,7 +289,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -322,7 +322,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -355,7 +355,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: a100
+            gpu: A100
             gpu_device: 20b2:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -388,7 +388,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -421,7 +421,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -454,7 +454,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -487,7 +487,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -520,7 +520,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -553,7 +553,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -586,7 +586,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -619,7 +619,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -652,7 +652,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -685,7 +685,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -718,7 +718,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -751,7 +751,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -784,7 +784,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -817,7 +817,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -850,7 +850,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -883,7 +883,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -916,7 +916,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100_nvl
+            gpu: H100_NVL
             gpu_device: 2321:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -949,7 +949,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -982,7 +982,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: a100_sxm4_40gb
+            gpu: A100_SXM4_40GB
             gpu_device: 20b0:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -1015,7 +1015,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h200
+            gpu: H200
             gpu_device: 2335:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -1048,7 +1048,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: b200
+            gpu: B200
             gpu_device: 2901:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
