--- a/models/private/1.51.0/nemoretriever-page-elements-v2.yaml
+++ b/models/private/1.51.0/nemoretriever-page-elements-v2.yaml
@@ -26,7 +26,7 @@ models:
           tags:
             backend: triton
             batch_size: '32'
-            gpu: a100-sxm4-80gb
+            gpu: A100-SXM4-80GB
             model_type: tensorrt
             precision: fp16
       modelFormat: trt-llm
@@ -51,7 +51,7 @@ models:
           tags:
             backend: triton
             batch_size: '32'
-            gpu: h100-nvl
+            gpu: H100-NVL
             model_type: tensorrt
             precision: fp16
       modelFormat: trt-llm
@@ -76,7 +76,7 @@ models:
           tags:
             backend: triton
             batch_size: '32'
-            gpu: h100-hbm3-80gb
+            gpu: H100-HBM3-80GB
             model_type: tensorrt
             precision: fp16
       modelFormat: trt-llm
@@ -101,7 +101,7 @@ models:
           tags:
             backend: triton
             batch_size: '32'
-            gpu: a10g
+            gpu: A10G
             model_type: tensorrt
             precision: fp16
       modelFormat: trt-llm
@@ -126,7 +126,7 @@ models:
           tags:
             backend: triton
             batch_size: '32'
-            gpu: l40s
+            gpu: L40S
             model_type: tensorrt
             precision: fp16
       modelFormat: trt-llm
@@ -151,7 +151,7 @@ models:
           tags:
             backend: triton
             batch_size: '32'
-            gpu: b200
+            gpu: B200
             model_type: tensorrt
             precision: fp16
       modelFormat: trt-llm
@@ -176,7 +176,7 @@ models:
           tags:
             backend: triton
             batch_size: '32'
-            gpu: l4
+            gpu: L4
             model_type: tensorrt
             precision: fp16
       modelFormat: trt-llm
@@ -201,7 +201,7 @@ models:
           tags:
             backend: triton
             batch_size: '32'
-            gpu: a100-sxm4-40gb
+            gpu: A100-SXM4-40GB
             model_type: tensorrt
             precision: fp16
       modelFormat: trt-llm
