Update tags.gpu in PbC 1.52.0 to uppercase

--- a/models/public/1.52.0/llama-3.3-nemotron-super-49b-v1.yaml
+++ b/models/public/1.52.0/llama-3.3-nemotron-super-49b-v1.yaml
@@ -25,7 +25,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -58,7 +58,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -91,7 +91,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -124,7 +124,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -157,7 +157,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '1'
@@ -190,7 +190,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -223,7 +223,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '2'
@@ -256,7 +256,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: h100
+            gpu: H100
             gpu_device: 2330:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -289,7 +289,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: a10g
+            gpu: A10G
             gpu_device: 2237:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
@@ -322,7 +322,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '4'
@@ -355,7 +355,7 @@ models:
           release: 1.8.5
           tags:
             feat_lora: 'false'
-            gpu: l40s
+            gpu: L40S
             gpu_device: 26b9:10de
             llm_engine: tensorrt_llm
             number_of_gpus: '8'
