--- a/models/public/1.53.0/nemoretriever-page-elements-v2.yaml
+++ b/models/public/1.53.0/nemoretriever-page-elements-v2.yaml
@@ -37,12 +37,14 @@ models:
         value: A10G
       - key: COUNT
         value: 1
-      - key: GPU DEVICE
-        value: ''
       - key: NIM VERSION
         value: 1.3.0
       - key: DOWNLOAD SIZE
         value: 1GB
+      - key: BACKEND
+        value: TRITON
+      - key: MODEL TYPE
+        value: TENSORRT
     - profileId: nim/nvidia/nemoretriever-page-elements-v2:l40sx1-trt-fp16-ckx59ghtpa
       framework: TensorRT-LLM
       displayName: Nemoretriever Page Elements V2 L40Sx1 FP16
@@ -64,12 +66,14 @@ models:
         value: L40S
       - key: COUNT
         value: 1
-      - key: GPU DEVICE
-        value: ''
       - key: NIM VERSION
         value: 1.3.0
       - key: DOWNLOAD SIZE
         value: 1GB
+      - key: BACKEND
+        value: TRITON
+      - key: MODEL TYPE
+        value: TENSORRT
   labels:
   - signed images
   - NSPECT-7OBP-T77C
